--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,6 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/nanoclaw"]
+
+[tool.ruff]
+line-length = 180
